# HLFixes

./: .gitignore  .gitmodules  BUILDING.md  HLFixes.sln  LICENSE  README.md
HLFixes/: HLFixes.vcxproj  HLFixes.vcxproj.filters  dllmain.cpp  hookutil.cpp  hookutil.h  types.h
Injector/: Injector.cpp  Injector.vcxproj  Injector.vcxproj.filters
Installer/: App.xaml.cs  Installer.cpp  Installer.rc  Installer.vcxproj  Installer.vcxproj.filters  MainWindow.xaml  MainWindow.xaml.cs  Resource.h  framework.h
Linux/: CMakeLists.txt  installer.sh  main.cpp  utils.cpp  utils.h
